--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
-language: objective-c
-osx_image: beta-xcode6.3
-
-before_install:
-  - brew update
-  - brew outdated xctool || brew upgrade xctool
+language: swift
+osx_image: xcode7.3
 
 xcode_project: syncthing-bar.xcodeproj
 xcode_scheme: syncthing-bar
