--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: swift
+language: objective-c
 osx_image: xcode7.3
 xcode_project: syncthing-bar.xcodeproj
-xcode_scheme: syncthing-barTests
+xcode_scheme: syncthing-bar
