--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: objective-c
 osx_image: xcode7.3
 xcode_project: syncthing-bar.xcodeproj
 xcode_scheme: syncthing-bar
+
+script:
+  - xcodebuild build test -project syncthing-bar.xcodeproj.xcodeproj -scheme syncthing-bar | xcpretty
