--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: objective-c
 osx_image: xcode7.3
-xcode_project: syncthing-bar.xcodeproj
-xcode_scheme: syncthing-bar
 
 script:
-  - xcodebuild build test -project syncthing-bar.xcodeproj -scheme syncthing-bar | xcpretty
+  - xcodebuild build test -project syncthing-bar.xcodeproj -scheme syncthing-bar
