--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 osx_image: xcode7.3
 
 script:
-  - xcodebuild build test -project syncthing-bar.xcodeproj -scheme syncthing-bar
+  - xcodebuild build test -project syncthing-bar.xcodeproj -scheme syncthing-bar -destination 'platform=OS X,arch=x86_64'
