--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,5 @@ language: objective-c
 osx_image: xcode7.3
 
 script:
-  - brew install xctool
   - xcodebuild build -configuration Debug -project syncthing-bar.xcodeproj -scheme syncthing-bar -destination 'platform=OS X,arch=x86_64'
-  - xctest -scheme syncthing-bar  
+  - xctool -scheme syncthing-bar  
