--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: objective-c
 osx_image: xcode7.3
 
 script:
-  - xcodebuild build -configuration Debug -project syncthing-bar.xcodeproj -scheme syncthing-bar -destination 'platform=OS X,arch=x86_64'
-  - xctool -scheme syncthing-bar  
+  - xctool -configuration Debug  -scheme syncthing-bar test
