--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: objective-c
 osx_image: xcode7.3
 
 script:
-  - xctool -configuration Debug  -scheme syncthing-bar test
+  - touch syncthing/syncthing
+  - xcodebuild test -configuration Debug -project syncthing-bar.xcodeproj -scheme syncthing-bar -destination 'platform=OS X,arch=x86_64'
